Add comprehensive integration testing to prevent old URL usage
- Add test-extension-urls.js to prevent old deployment URL usage
- Add test-config-validation.js for configuration validation
- Add test-url-behavior.js for URL behavior testing
- Update package.json with new test scripts
- Add GitHub Actions workflow for automated testing
- Add pre-commit hooks for testing
- Add deployment script with tests
- Fix manifest.json to only use stable URL
- Add comprehensive testing guide
- All tests now pass 100% - prevents 500 errors from old URLs

--- a/chrome-store-package/newtab.html
+++ b/chrome-store-package/newtab.html
@@ -34,6 +34,7 @@
       <div class="controls">
         <button id="another">Another</button>
         <button id="copy">Copy</button>
+        <button id="refresh" title="Refresh jokes from server">🔄</button>
       </div>
       <footer>Poor jokes — delivered fresh on every new tab.</footer>
     </div>
