Update project configuration and add new features
- Updated Chrome Store guide and package configuration
- Enhanced newtab functionality with performance monitoring
- Added smart caching and URL validation scripts
- Updated privacy policy and manifest files
- Added deployment summary and troubleshooting docs
- Improved API configuration and validation

--- a/pages/privacy-policy.html
+++ b/pages/privacy-policy.html
@@ -98,7 +98,7 @@
     <div class="contact">
         <p>If you have any questions about this privacy policy or our data practices, please contact us:</p>
         <p><strong>Email:</strong> privacy@poorjokes.com</p>
-        <p><strong>Website:</strong> <a href="https://poor-jokes-newtab-h84vfdbd2-mayanks-projects-72f678fa.vercel.app">https://poor-jokes-newtab-h84vfdbd2-mayanks-projects-72f678fa.vercel.app</a></p>
+        <p><strong>Website:</strong> <a href="https://poor-jokes-newtab.vercel.app">https://poor-jokes-newtab.vercel.app</a></p>
     </div>
 
     <hr>
