--- a/chrome-store-package/newtab.html
+++ b/chrome-store-package/newtab.html
@@ -40,8 +40,11 @@
     </div>
 
     <script src="jokes.js"></script>
+    <script src="../../config/urls.js"></script>
     <script src="js/config.js"></script>
     <script src="js/api-manager.js"></script>
+    <script src="js/smart-cache.js"></script>
+    <script src="js/performance-monitor.js"></script>
     <script src="newtab-v2.js"></script>
   </body>
 </html>
