--- a/public/privacy-policy.html
+++ b/public/privacy-policy.html
@@ -98,7 +98,7 @@
     <div class="contact">
         <p>If you have any questions about this privacy policy or our data practices, please contact us:</p>
         <p><strong>Email:</strong> privacy@poorjokes.com</p>
-        <p><strong>Website:</strong> <a href="https://poor-jokes-newtab-h84vfdbd2-mayanks-projects-72f678fa.vercel.app">https://poor-jokes-newtab-h84vfdbd2-mayanks-projects-72f678fa.vercel.app</a></p>
+        <p><strong>Website:</strong> <a href="https://poor-jokes-newtab.vercel.app">https://poor-jokes-newtab.vercel.app</a></p>
     </div>
 
     <hr>
