Improve joke system: never-repeat feature, localStorage caching, UI improvements
- Implemented never-repeat joke system with bounded storage
- Added localStorage caching for instant joke loading
- Improved button visibility and styling
- Swapped button positions (Copy/Another, Cancel/Submit, thumbs)
- Changed emojis to 😂 (lol) and 😐 (meh)
- Added daily random background colors
- Updated footer text
- Simplified joke ID handling (removed local joke complexity)
- Added graceful error handling for ratings

--- a/chrome-store-package/newtab.html
+++ b/chrome-store-package/newtab.html
@@ -11,11 +11,11 @@
       <h1 id="joke">Loading joke...</h1>
       <div class="rating-section">
         <div class="rating-buttons">
-          <button id="thumbs-up" class="rating-btn" title="Rate this joke">
-            👍 <span id="up-count">0</span>
-          </button>
           <button id="thumbs-down" class="rating-btn" title="Rate this joke">
-            👎 <span id="down-count">0</span>
+            😐 <span id="down-count">0</span>
+          </button>
+          <button id="thumbs-up" class="rating-btn" title="Rate this joke">
+            😂 <span id="up-count">0</span>
           </button>
         </div>
         <div class="rating-stats" id="rating-stats"></div>
@@ -25,17 +25,17 @@
         <div class="submission-form" id="submission-form" style="display: none;">
           <textarea id="joke-textarea" placeholder="Enter your poor joke here... (max 500 characters)" maxlength="500"></textarea>
           <div class="submission-controls">
-            <button id="submit-joke" class="submit-joke-btn">Submit Joke</button>
             <button id="cancel-submission" class="cancel-btn">Cancel</button>
+            <button id="submit-joke" class="submit-joke-btn">Submit Joke</button>
           </div>
           <div class="submission-status" id="submission-status"></div>
         </div>
       </div>
       <div class="controls">
-        <button id="another">Another</button>
         <button id="copy">Copy</button>
+        <button id="another">Another</button>
       </div>
-      <footer>Poor jokes — delivered fresh on every new tab.</footer>
+      <footer>Joorpokes: Because laughter is the cheapest medicine, innit ?</footer>
     </div>
 
     <script src="jokes.js"></script>
