--- a/chrome-store-package/newtab.html
+++ b/chrome-store-package/newtab.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Poor Joke</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Joorpokes</title>
+    <link rel="stylesheet" href="styles.css?v=1.0.6">
   </head>
   <body>
     <div class="container">
@@ -38,9 +38,9 @@
       <footer>Joorpokes: Because laughter is the cheapest medicine, innit ?</footer>
     </div>
 
-    <script src="jokes.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/api-manager.js"></script>
-    <script src="newtab-v2.js"></script>
+    <script src="jokes.js?v=1.0.6"></script>
+    <script src="js/config.js?v=1.0.6"></script>
+    <script src="js/api-manager.js?v=1.0.6"></script>
+    <script src="newtab-v2.js?v=1.0.6"></script>
   </body>
 </html>
