--- a/newtab.html
+++ b/newtab.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Poor Joke</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Joorpokes</title>
+    <link rel="stylesheet" href="styles.css?v=1.0.6">
   </head>
   <body>
     <div class="container">
       <h1 id="joke">Loading joke...</h1>
       <div class="rating-section">
         <div class="rating-buttons">
-          <button id="thumbs-up" class="rating-btn" title="Rate this joke">
-            👍 <span id="up-count">0</span>
-          </button>
           <button id="thumbs-down" class="rating-btn" title="Rate this joke">
-            👎 <span id="down-count">0</span>
+            😐 <span id="down-count">0</span>
+          </button>
+          <button id="thumbs-up" class="rating-btn" title="Rate this joke">
+            😂 <span id="up-count">0</span>
           </button>
         </div>
         <div class="rating-stats" id="rating-stats"></div>
@@ -25,22 +25,22 @@
         <div class="submission-form" id="submission-form" style="display: none;">
           <textarea id="joke-textarea" placeholder="Enter your poor joke here... (max 500 characters)" maxlength="500"></textarea>
           <div class="submission-controls">
-            <button id="submit-joke" class="submit-joke-btn">Submit Joke</button>
             <button id="cancel-submission" class="cancel-btn">Cancel</button>
+            <button id="submit-joke" class="submit-joke-btn">Submit Joke</button>
           </div>
           <div class="submission-status" id="submission-status"></div>
         </div>
       </div>
       <div class="controls">
-        <button id="another">Another</button>
         <button id="copy">Copy</button>
+        <button id="another">Another</button>
       </div>
-      <footer>Poor jokes — delivered fresh on every new tab.</footer>
+      <footer>Joorpokes: Because laughter is the cheapest medicine, innit ?</footer>
     </div>
 
-    <script src="jokes.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/api-manager.js"></script>
-    <script src="newtab-v2.js"></script>
+    <script src="jokes.js?v=1.0.6"></script>
+    <script src="js/config.js?v=1.0.6"></script>
+    <script src="js/api-manager.js?v=1.0.6"></script>
+    <script src="newtab-v2.js?v=1.0.6"></script>
   </body>
 </html>
